refactor: remove slides to save time

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -41,7 +41,7 @@ import Inspiration from "../slides/part-4/Inspiration.astro";
 
 			<!-- Part 2: libraries -->
 			<Part2Title />
-			<Flip />
+			<!-- <Flip /> -->
 			<JSFrameworks />
 			<JSLibraries />
 			<Breathe />
