--- a/src/slides/intro/RenderingPipeline.astro
+++ b/src/slides/intro/RenderingPipeline.astro
@@ -26,7 +26,7 @@ const subSectionTitle = "Du code au pixel";
 		<img data-src={pipeline} alt="" />
 	</Slide>
 
-	<Slide sectionTitle={title} subSectionTitle={subSectionTitle} animate={false}>
+	<!-- <Slide sectionTitle={title} subSectionTitle={subSectionTitle} animate={false}>
 		<h3>JavaScript</h3>
 		<p>Modification dynamique de la page</p>
 		<img data-src={js} alt="" />
@@ -59,7 +59,7 @@ const subSectionTitle = "Du code au pixel";
 	<Slide sectionTitle={title} subSectionTitle={subSectionTitle}>
 		<p>Recalculé à chaque frame 🔄</p>
 		<img data-src={pipeline} alt="" />
-	</Slide>
+	</Slide> -->
 
 	<Slide sectionTitle={title} subSectionTitle={subSectionTitle}>
 		<h3>Pour faire tout ça, le navigateur utilise:</h3>
