--- a/src/slides/part-1/css/transition/RotationBezierCurves.astro
+++ b/src/slides/part-1/css/transition/RotationBezierCurves.astro
@@ -26,7 +26,7 @@ const subSectionTitle = "";
 	>
 </SlideDemo>
 
-<SlideDemo sectionTitle={title} subSectionTitle={subSectionTitle}>
+<!-- <SlideDemo sectionTitle={title} subSectionTitle={subSectionTitle}>
 	<p>
 		<span class="icon-wrapper"><span class="icon hand first">👋</span></span>
 	</p>
@@ -106,7 +106,7 @@ const subSectionTitle = "";
 			<span class="icon-wrapper"><span class="icon hand third">🤌</span></span>
 		</p>
 	</FlexContainer>
-</SlideDemo>
+</SlideDemo> -->
 
 <style lang="scss">
 	.icon {
