--- a/src/slides/part-1/vanilla-js/web-animation-api/sections/ControlingExecution.astro
+++ b/src/slides/part-1/vanilla-js/web-animation-api/sections/ControlingExecution.astro
@@ -87,7 +87,7 @@ const seek = (timestamp) => animation.currentTime = timestamp;
 	</article>
 </Slide>
 
-<Slide sectionTitle={title} subSectionTitle={subSectionTitle}>
+<!-- <Slide sectionTitle={title} subSectionTitle={subSectionTitle}>
 	<article>
 		<div class="code-container">
 			<span data-id="waapi-finish-lang" class="code-lang">javascript</span>
@@ -111,7 +111,7 @@ animation1.finished.then(() => animation2.play());
 				`}</code></pre>
 		</div>
 	</article>
-</Slide>
+</Slide> -->
 
 <Slide sectionTitle={title} subSectionTitle={subSectionTitle}>
 	<div>
