--- a/src/slides/part-2/js-frameworks/JSFrameworks.astro
+++ b/src/slides/part-2/js-frameworks/JSFrameworks.astro
@@ -18,7 +18,7 @@ const title = "Frameworks JavaScript";
 	<Vue title={title} />
 	<React title={title} />
 	<Svelte title={title} />
-	<Angular title={title} />
+	<!-- <Angular title={title} /> -->
 
 	<FrameworksRecap title={title} />
 
