--- a/src/slides/part-2/js-libraries/framer/Framer.astro
+++ b/src/slides/part-2/js-libraries/framer/Framer.astro
@@ -16,7 +16,7 @@ const subSectionTitle = "React";
 <Slide sectionTitle={title} subSectionTitle={subSectionTitle}>
 	<FramerTitle />
 	<div class="content">
-		<CodeBlock lang="JSX" lines="|2,10|3-9|">
+		<CodeBlock lang="JSX" lines="|2,10|3-9">
 			{
 				`export const MyComponent = ({ isVisible }) => (
   <AnimatePresence>
