--- a/src/slides/part-3/canvas-webgl/shaders/Shaders.astro
+++ b/src/slides/part-3/canvas-webgl/shaders/Shaders.astro
@@ -45,7 +45,7 @@ const subSectionTitle = "Shaders GLSL";
 	</div>
 </Slide>
 
-<Slide sectionTitle={title} subSectionTitle={subSectionTitle} animate={false}>
+<!-- <Slide sectionTitle={title} subSectionTitle={subSectionTitle} animate={false}>
 	<h3>Vertex Shader</h3>
 	<p>geométrie</p>
 	<div class="content p-0">
@@ -62,7 +62,7 @@ void main() {
 			}
 		</CodeBlock>
 	</div>
-</Slide>
+</Slide> -->
 
 <Slide sectionTitle={title} subSectionTitle={subSectionTitle}>
 	<h3>Vertex Shader</h3>
@@ -94,7 +94,7 @@ void main() {
 	</div>
 </Slide>
 
-<Slide sectionTitle={title} subSectionTitle={subSectionTitle} animate={false}>
+<!-- <Slide sectionTitle={title} subSectionTitle={subSectionTitle} animate={false}>
 	<h3>Fragment Shader</h3>
 	<p>couleur</p>
 	<div class="content p-0">
@@ -108,7 +108,7 @@ void main() {
 			}
 		</CodeBlock>
 	</div>
-</Slide>
+</Slide> -->
 
 <Slide sectionTitle={title} subSectionTitle={subSectionTitle} animate={false}>
 	<h3>Fragment Shader</h3>
