--- a/src/slides/part-4/Accessibility.astro
+++ b/src/slides/part-4/Accessibility.astro
@@ -83,7 +83,7 @@ const title = "Pour finir";
 		</div>
 	</Slide>
 
-	<Slide sectionTitle={title} subSectionTitle={"Accessibilité"} animate={false}>
+	<!-- <Slide sectionTitle={title} subSectionTitle={"Accessibilité"} animate={false}>
 		<h3>Accessibilité du contenu</h3>
 		<div class="content p-0">
 			<CodeBlock lang="HTML" lines="|1,4,5,6">
@@ -98,7 +98,7 @@ const title = "Pour finir";
 				}
 			</CodeBlock>
 		</div>
-	</Slide>
+	</Slide> -->
 </section>
 
 <style>
