--- a/src/slides/part-1/css/transition/TranslationCurves.astro
+++ b/src/slides/part-1/css/transition/TranslationCurves.astro
@@ -6,7 +6,7 @@ const { title } = Astro.props;
 const subSectionTitle = "";
 ---
 
-<SlideDemo sectionTitle={title} subSectionTitle={subSectionTitle}>
+<!-- <SlideDemo sectionTitle={title} subSectionTitle={subSectionTitle}>
 	<p class="linear">
 		<label>
 			<input type="checkbox" />
@@ -24,7 +24,7 @@ const subSectionTitle = "";
 }`
 		}</CodeBlock
 	>
-</SlideDemo>
+</SlideDemo> -->
 
 <SlideDemo sectionTitle={title} subSectionTitle={subSectionTitle}>
 	<div class="container">
