--- a/src/slides/part-4/Inspiration.astro
+++ b/src/slides/part-4/Inspiration.astro
@@ -16,7 +16,7 @@ const title = "Pour finir";
 	</Slide>
 
 	<Slide sectionTitle={title} subSectionTitle={"Inspiration"}>
-		<div class="fragment">
+		<div>
 			<h3>Design</h3>
 			<FlexContainer gap="1rem">
 				<img data-src={dribbble} alt="" />
