--- a/src/slides/part-1/css/animation/CSSAnimation.astro
+++ b/src/slides/part-1/css/animation/CSSAnimation.astro
@@ -32,7 +32,7 @@ const title = "Animation CSS";
 	<SVGAnimation title={title} />
 	<!-- <AnimationStates {title} /> -->
 
-	<CSSAnimationRecap title={title} />
+	<!-- <CSSAnimationRecap title={title} /> -->
 
 	<Slide>
 		<AnimationGraph />
