--- a/src/slides/part-1/css/transition/CSSTransition.astro
+++ b/src/slides/part-1/css/transition/CSSTransition.astro
@@ -35,16 +35,16 @@ const title = "Transition CSS";
 		}
 	</style>
 
-	<SimpleHover title={title} />
+	<!-- <SimpleHover title={title} /> -->
 	<TranslateBad title={title} />
 	<TranslateGood title={title} />
 	<RotationBezierCurves title={title} />
-	<TranslationCurves title={title} />
+	<!-- <TranslationCurves title={title} /> -->
 	<ExampleButton title={title} />
 	<ExampleMovieCard title={title} />
 	<Example3DCards title={title} />
 
-	<CSSTransitionRecap title={title} />
+	<!-- <CSSTransitionRecap title={title} /> -->
 
 	<Slide>
 		<TransitionGraph />
