--- a/src/slides/part-1/vanilla-js/requestanimationframe/RequestAnimationFrame.astro
+++ b/src/slides/part-1/vanilla-js/requestanimationframe/RequestAnimationFrame.astro
@@ -42,7 +42,7 @@ const title = "requestAnimationFrame()";
 	<RafDemos title={title} />
 	<SpringAnimations title={title} />
 
-	<RafRecap title={title} />
+	<!-- <RafRecap title={title} /> -->
 
 	<Slide>
 		<RafGraph />
