--- a/src/slides/part-2/js-frameworks/svelte/Svelte.astro
+++ b/src/slides/part-2/js-frameworks/svelte/Svelte.astro
@@ -11,7 +11,7 @@ const subSectionTitle = "Les APIs intégrées";
 	<SvelteTitle />
 </Slide>
 
-<Slide sectionTitle={title} subSectionTitle={subSectionTitle}>
+<!-- <Slide sectionTitle={title} subSectionTitle={subSectionTitle}>
 	<SvelteTitle />
 	<br />
 	<article>
@@ -56,7 +56,7 @@ import { flip } from 'svelte/animate';
 `}</code></pre>
 		</div>
 	</article>
-</Slide>
+</Slide> -->
 
 <Slide sectionTitle={title} subSectionTitle={subSectionTitle}>
 	<SvelteTitle />
