--- a/src/slides/part-2/js-libraries/JSLibraries.astro
+++ b/src/slides/part-2/js-libraries/JSLibraries.astro
@@ -20,7 +20,7 @@ const title = "Librairies JavaScript";
 	<VueUseMotion title={title} />
 	<VanillaJS title={title} />
 
-	<JSLibrariesRecap title={title} />
+	<!-- <JSLibrariesRecap title={title} /> -->
 
 	<Slide>
 		<LibrairiesGraph />
