--- a/src/slides/part-3/canvas-2D/Canvas2D.astro
+++ b/src/slides/part-3/canvas-2D/Canvas2D.astro
@@ -101,7 +101,7 @@ ctx.fillRect(100, 100, 200, 200);`
 		<Canvas2DDemo4 client:visible />
 	</SlideDemo>
 
-	<Canvas2DRecap title={title} />
+	<!-- <Canvas2DRecap title={title} /> -->
 
 	<Slide>
 		<Canvas2DGraph />
