--- a/src/slides/part-3/canvas-2D/Canvas2DLibs.astro
+++ b/src/slides/part-3/canvas-2D/Canvas2DLibs.astro
@@ -14,7 +14,7 @@ const subSectionTitle = "Librairies";
 	<p>Librairie généraliste pour le canvas 2D</p>
 	<div class="content p-0">
 		<img data-src={fabric} alt="" />
-		<p class="fragment">
+		<p>
 			Taille <em>(min + gzip)</em> : <strong>85.5kB</strong>
 		</p>
 	</div>
@@ -25,13 +25,13 @@ const subSectionTitle = "Librairies";
 	<p>Moteur physique 2D</p>
 	<div class="content p-0">
 		<img data-src={matter} alt="" />
-		<p class="fragment">
+		<p>
 			Taille <em>(min + gzip)</em> : <strong>24.5kB</strong>
 		</p>
 	</div>
 </Slide>
 
-<Slide sectionTitle={title} subSectionTitle={subSectionTitle}>
+<!-- <Slide sectionTitle={title} subSectionTitle={subSectionTitle}>
 	<h2>Phaser</h2>
 	<p>Framework de jeu vidéo</p>
 	<div class="content p-0">
@@ -43,7 +43,7 @@ const subSectionTitle = "Librairies";
 			Taille <em>(min + gzip)</em> : <strong>299.4kB</strong>
 		</p>
 	</div>
-</Slide>
+</Slide> -->
 
 <Slide sectionTitle={title} subSectionTitle={subSectionTitle}>
 	<h2>Rive</h2>
@@ -55,7 +55,7 @@ const subSectionTitle = "Librairies";
 			loop=""
 			data-src="https://framerusercontent.com/modules/assets/vf5yzeIR81h15njzZ8Rs9JlHs~fFFsGu9UlIe3UelLp-S2koOxZWa_H1jb0uFbJlOgKig.mp4"
 		></video>
-		<p class="fragment">
+		<p>
 			Taille <em>(min + gzip)</em> : <strong>20.9kB</strong>
 		</p>
 	</div>
