--- a/src/slides/part-4/Accessibility.astro
+++ b/src/slides/part-4/Accessibility.astro
@@ -11,12 +11,12 @@ const title = "Pour finir";
 	</Slide>
 
 	<Slide sectionTitle={title} subSectionTitle={"Accessibilité"}>
-		<h3>Réduction des animations</h3>
+		<h3>Réduction du mouvement</h3>
 		<div class="content p-0">
 			<CodeBlock lang="css">
 				{
 					`@media (prefers-reduced-motion: reduce) {
-  /* réduire les animations */
+  /* réduire le mouvement */
 }`
 				}
 			</CodeBlock>
@@ -24,12 +24,12 @@ const title = "Pour finir";
 	</Slide>
 
 	<Slide sectionTitle={title} subSectionTitle={"Accessibilité"} animate={false}>
-		<h3>Réduction des animations</h3>
+		<h3>Réduction du mouvement</h3>
 		<div class="content p-0">
 			<CodeBlock lang="css">
 				{
 					`@media (prefers-reduced-motion: no-preference) {
-  /* animations ok */
+  /* mouvement ok */
 }`
 				}
 			</CodeBlock>
@@ -37,7 +37,7 @@ const title = "Pour finir";
 	</Slide>
 
 	<Slide sectionTitle={title} subSectionTitle={"Accessibilité"} animate={false}>
-		<h3>Réduction des animations</h3>
+		<h3>Réduction du mouvement</h3>
 		<div class="content p-0">
 			<CodeBlock lang="css">
 				{
@@ -54,7 +54,7 @@ const title = "Pour finir";
 	</Slide>
 
 	<Slide sectionTitle={title} subSectionTitle={"Accessibilité"} animate={false}>
-		<h3>Réduction des animations</h3>
+		<h3>Réduction du mouvement</h3>
 		<div class="content p-0">
 			<CodeBlock lang="css">
 				{
@@ -71,7 +71,7 @@ const title = "Pour finir";
 	</Slide>
 
 	<Slide sectionTitle={title} subSectionTitle={"Accessibilité"} animate={false}>
-		<h3>Réduction des animations</h3>
+		<h3>Réduction du mouvement</h3>
 		<div class="content p-0">
 			<CodeBlock lang="javascript">
 				{
