--- a/src/slides/part-4/Why.astro
+++ b/src/slides/part-4/Why.astro
@@ -12,12 +12,12 @@ const subSectionTitle = "Pourquoi on fait ça déjà ?";
 	</Slide>
 	<Slide sectionTitle={title} subSectionTitle={subSectionTitle}>
 		<img data-src={gifExcited} alt="homme excité" />
-		<p>Tant de choses à faire !</p>
+		<p>Tant d'animations possibles !</p>
 	</Slide>
 
 	<Slide sectionTitle={title} subSectionTitle={subSectionTitle}>
-		<p>Tu peux faire 1 animation, pas 15...</p>
-		<p>Tu peux faire 2 animations, pas 15...</p>
+		<p>Tu peux faire 1 animation sur une page, pas 15...</p>
+		<p>Tu peux faire 2 animations sur une page, pas 15...</p>
 		<p>Tu peux faire 3 animations à la limite, mais pas 15...</p>
 		<p>...</p>
 	</Slide>
