--- a/src/slides/part-1/vanilla-js/web-animation-api/WebAnimationAPI.astro
+++ b/src/slides/part-1/vanilla-js/web-animation-api/WebAnimationAPI.astro
@@ -15,7 +15,7 @@ const title = "Web Animation API";
 	<Usage title={title} />
 	<ControlingExecution title={title} />
 
-	<WAAPIRecap title={title} />
+	<!-- <WAAPIRecap title={title} /> -->
 
 	<Slide>
 		<WAAPIGraph />
