--- a/src/slides/part-2/js-frameworks/JSFrameworks.astro
+++ b/src/slides/part-2/js-frameworks/JSFrameworks.astro
@@ -18,9 +18,9 @@ const title = "Frameworks JavaScript";
 	<Vue title={title} />
 	<React title={title} />
 	<Svelte title={title} />
-	<!-- <Angular title={title} /> -->
+	<Angular title={title} />
 
-	<FrameworksRecap title={title} />
+	<!-- <FrameworksRecap title={title} /> -->
 
 	<Slide>
 		<FrameworksGraph />
