--- a/src/slides/part-3/canvas-webgl/CanvasWebgl.astro
+++ b/src/slides/part-3/canvas-webgl/CanvasWebgl.astro
@@ -18,7 +18,7 @@ const title = "Canvas WebGL";
 
 	<Shaders title={title} />
 
-	<CanvasWebglRecap title={title} />
+	<!-- <CanvasWebglRecap title={title} /> -->
 	<Slide>
 		<CanvasWebglGraph />
 	</Slide>
