--- a/src/slides/intro/DOMandCanvas.astro
+++ b/src/slides/intro/DOMandCanvas.astro
@@ -3,7 +3,7 @@ import Slide from "../../components/Slide.astro";
 import imgPeinture from "./images/peinture.jpeg";
 
 const { title } = Astro.props;
-const subSectionTitle = "Qu'est-ce qu'on peut animer ?";
+const subSectionTitle = "Qu'est-ce qu'on peut animer ?";
 ---
 
 <section>
@@ -46,5 +46,6 @@ const subSectionTitle = "Qu'est-ce qu'on peut animer ?";
 	img {
 		height: 30vh;
 		margin-top: 0.5rem;
+		border-radius: .25em;
 	}
 </style>
