--- a/src/slides/intro/WhyAnimate.astro
+++ b/src/slides/intro/WhyAnimate.astro
@@ -2,7 +2,7 @@
 import Slide from "../../components/Slide.astro";
 
 const { title } = Astro.props;
-const subSectionTitle = "Pourquoi faire des animations ?";
+const subSectionTitle = "Pourquoi faire des animations ?";
 ---
 
 <section>
@@ -12,10 +12,10 @@ const subSectionTitle = "Pourquoi faire des animations ?";
 
 	<Slide sectionTitle={title} subSectionTitle={subSectionTitle}>
 		<ul>
-			<li>Faciliter la <strong>compréhension</strong></li>
-			<li class="fragment">Apporter de la <strong>fluidité</strong></li>
-			<li class="fragment">Donner du <strong>feedback</strong></li>
-			<li class="fragment">Exprimer son <strong>image de marque</strong></li>
+			<li>✔ Faciliter la <strong>compréhension</strong></li>
+			<li class="fragment">✔ Apporter de la <strong>fluidité</strong></li>
+			<li class="fragment">✔ Donner du <strong>feedback</strong></li>
+			<li class="fragment">✔ Exprimer son <strong>image de marque</strong></li>
 			<li class="fragment">...</li>
 		</ul>
 	</Slide>
