--- a/src/slides/part-1/css/transition/CSSTransition.astro
+++ b/src/slides/part-1/css/transition/CSSTransition.astro
@@ -22,10 +22,17 @@ const title = "Transition CSS";
 	<Slide>
 		<h1>{title + " "}</h1>
 		<p>
-			Usage: passage d’un état A à un état B <span class="fragment custom bar"
+			<strong>Usage:</strong> passage d’un état A à un état B <span class="fragment custom bar"
 				>différents</span
 			>
 			<span class="fragment custom bar">selon le plus court chemin</span>
+		</p>
+	</Slide>
+
+	<Slide>
+		<h1>{title + " "}</h1>
+		<p>
+			<strong>Usage:</strong> passage d’un état A à un état B
 		</p>
 	</Slide>
 
