--- a/src/slides/part-2/flip/Flip.astro
+++ b/src/slides/part-2/flip/Flip.astro
@@ -18,7 +18,7 @@ const title = "FLIP";
 	<Slide>
 		<h1>{title + " "}</h1>
 		<p>
-			Usage: déplacement d'éléments dans le DOM, ou autres animations qui ne
+			<strong>Usage:</strong> déplacement d'éléments dans le DOM, ou autres animations qui ne
 			peuvent être faites nativement.
 		</p>
 	</Slide>
