--- a/src/slides/part-3/canvas-2D/Canvas2D.astro
+++ b/src/slides/part-3/canvas-2D/Canvas2D.astro
@@ -24,7 +24,7 @@ const title = "Canvas 2D";
 	<Slide>
 		<h1>{title + " "}</h1>
 		<p>
-			Usage: animation complexe et/ou interactive d'un grand nombre de formes
+			<strong>Usage:</strong> animation complexe et/ou interactive d'un grand nombre de formes
 			géométriques lorsque les SVGs ne suffisent plus
 		</p>
 	</Slide>
@@ -50,12 +50,12 @@ ctx.fillRect(100, 100, 200, 200);`
 		</FlexContainer>
 	</Slide>
 
-	<SlideDemo sectionTitle={title} subSectionTitle={"Utilisation"}>
+	<!-- <SlideDemo sectionTitle={title} subSectionTitle={"Utilisation"}>
 		<img
 			src="https://developer.mozilla.org/en-US/docs/Web/API/Canvas_API/Tutorial/Drawing_shapes/canvas_default_grid.png"
 			alt=""
 		/>
-	</SlideDemo>
+	</SlideDemo> -->
 
 	<SlideDemo sectionTitle={title} subSectionTitle={"Utilisation"}>
 		<Canvas2DDemo2 client:visible />
