--- a/src/slides/part-1/css/animation/CSSAnimation.astro
+++ b/src/slides/part-1/css/animation/CSSAnimation.astro
@@ -20,7 +20,7 @@ const title = "Animation CSS";
 	<Slide>
 		<h1>{title + " "}</h1>
 		<p>
-			Usage: animation composée d’au moins deux états, qui <em>peut</em> être déclenchée
+			<strong>Usage:</strong> animation composée d’au moins deux états, qui <em>peut</em> être déclenchée
 			immédiatement et qui <em>peut</em> ne jamais se terminer
 		</p>
 	</Slide>
