--- a/src/slides/part-1/vanilla-js/web-animation-api/WAAPIIntro.astro
+++ b/src/slides/part-1/vanilla-js/web-animation-api/WAAPIIntro.astro
@@ -11,7 +11,7 @@ const { title } = Astro.props;
 <Slide>
 	<h1>{title + " "}</h1>
 	<p>
-		Usage: similaire aux transitions et animations CSS, mais contrôlables
+		<strong>Usage:</strong> similaire aux transitions et animations CSS, mais contrôlables
 		finement en javascript
 	</p>
 </Slide>
