feat: improve the first slide

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -47,7 +47,7 @@ const { title } = Astro.props;
 </html>
 
 <style is:global lang="scss">
-	@import url("https://fonts.googleapis.com/css2?family=Rubik:wght@400;700&display=swap");
+	@import url("https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700;800&display=swap");
 	@import "reveal.js/dist/reveal.css" layer(reveal);
 	@import "src/styles/main.scss";
 </style>
