--- a/src/slides/part-4/Why.astro
+++ b/src/slides/part-4/Why.astro
@@ -26,6 +26,7 @@ const subSectionTitle = "Pourquoi on fait ça déjà ?";
 <style>
 	img {
 		height: 45vh;
+		margin-top: 3em;
 	}
 	p {
 		font-size: 1.3em;
