--- a/src/slides/intro/WhyAnimate.astro
+++ b/src/slides/intro/WhyAnimate.astro
@@ -15,7 +15,7 @@ const subSectionTitle = "Pourquoi faire des animations ?";
 			<li>✔ Faciliter la <strong>compréhension</strong></li>
 			<li class="fragment">✔ Apporter de la <strong>fluidité</strong></li>
 			<li class="fragment">✔ Donner du <strong>feedback</strong></li>
-			<li class="fragment">✔ Exprimer son <strong>image de marque</strong></li>
+			<li class="fragment">✔ Montrer son <strong>image de marque</strong></li>
 			<li class="fragment">...</li>
 		</ul>
 	</Slide>
