--- a/src/slides/part-4/Inspiration.astro
+++ b/src/slides/part-4/Inspiration.astro
@@ -40,8 +40,8 @@ const title = "Pour finir";
 		margin-block: 1em -1em;
 	}
 	h3 {
-		/* margin-top: -1em; */
 		font-size: 1.5em;
+		color: var(--font-color-default);
 	}
 	img {
 		height: 5rem;
