refactor: remove graphs

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,6 +21,7 @@ import Why from "../slides/part-4/Why.astro";
 import Breathe from "../slides/part-2/Breathe.astro";
 import Recap from "../slides/part-4/Recap.astro";
 import Inspiration from "../slides/part-4/Inspiration.astro";
+import Fast from "../slides/intro/Fast.astro";
 ---
 
 <Layout
@@ -30,6 +31,7 @@ import Inspiration from "../slides/part-4/Inspiration.astro";
 		<div class="slides">
 			<BlockMainThreadButtonCorner client:visible client:only />
 			<Title />
+			<Fast />
 			<TechnicalIntro />
 
 			<!-- Part 1: native APIs -->
