--- a/src/slides/intro/RenderingPipeline.astro
+++ b/src/slides/intro/RenderingPipeline.astro
@@ -23,7 +23,7 @@ const subSectionTitle = "Du code au pixel";
 	</Slide>
 
 	<Slide sectionTitle={title} subSectionTitle={subSectionTitle}>
-		<img data-src={pipeline} alt="" />
+		<img data-id="pipeline" data-src={pipeline} alt="" />
 	</Slide>
 
 	<!-- <Slide sectionTitle={title} subSectionTitle={subSectionTitle} animate={false}>
@@ -61,7 +61,7 @@ const subSectionTitle = "Du code au pixel";
 		<img data-src={pipeline} alt="" />
 	</Slide> -->
 
-	<Slide sectionTitle={title} subSectionTitle={subSectionTitle}>
+	<!-- <Slide sectionTitle={title} subSectionTitle={subSectionTitle}>
 		<div class="wrapper">
 			<div>
 				<img data-src={cpu} alt="" />
@@ -101,10 +101,10 @@ const subSectionTitle = "Du code au pixel";
 				<p><strong>GPU</strong></p>
 			</div>
 		</div>
-	</Slide>
+	</Slide> -->
 
-	<Slide sectionTitle={title} subSectionTitle={subSectionTitle} animate={false}>
-		<img data-src={pipeline} alt="" />
+	<Slide sectionTitle={title} subSectionTitle={subSectionTitle}>
+		<img data-id="pipeline" data-src={pipeline} alt="" />
 		<div class="grid">
 			<img data-src={cpu} alt="" />
 			<img data-src={cpu} alt="" />
