--- a/src/slides/part-1/css/animation/CSSAnimation.astro
+++ b/src/slides/part-1/css/animation/CSSAnimation.astro
@@ -20,8 +20,9 @@ const title = "Animation CSS";
 	<Slide>
 		<h1>{title + " "}</h1>
 		<p>
-			<strong>Usage:</strong> animation composée d’au moins deux états, qui <em>peut</em> être déclenchée
-			immédiatement et qui <em>peut</em> ne jamais se terminer
+			<strong>Usage:</strong> animation composée d’au moins deux états, qui <em
+				>peut</em
+			> être déclenchée immédiatement et qui <em>peut</em> ne jamais se terminer
 		</p>
 	</Slide>
 
@@ -34,7 +35,8 @@ const title = "Animation CSS";
 
 	<!-- <CSSAnimationRecap title={title} /> -->
 
-	<Slide>
+	<!-- <Slide>
 		<AnimationGraph />
-	</Slide>
+	</Slide> -->
+</section>
 </section>
