--- a/src/slides/part-1/css/transition/CSSTransition.astro
+++ b/src/slides/part-1/css/transition/CSSTransition.astro
@@ -53,7 +53,7 @@ const title = "Transition CSS";
 
 	<!-- <CSSTransitionRecap title={title} /> -->
 
-	<Slide>
+	<!-- <Slide>
 		<TransitionGraph />
-	</Slide>
+	</Slide> -->
 </section>
