--- a/src/slides/part-1/vanilla-js/requestanimationframe/RequestAnimationFrame.astro
+++ b/src/slides/part-1/vanilla-js/requestanimationframe/RequestAnimationFrame.astro
@@ -44,9 +44,9 @@ const title = "requestAnimationFrame()";
 
 	<!-- <RafRecap title={title} /> -->
 
-	<Slide>
+	<!-- <Slide>
 		<RafGraph />
-	</Slide>
+	</Slide> -->
 </section>
 
 <style>
