--- a/src/slides/part-1/vanilla-js/web-animation-api/WebAnimationAPI.astro
+++ b/src/slides/part-1/vanilla-js/web-animation-api/WebAnimationAPI.astro
@@ -17,7 +17,7 @@ const title = "Web Animation API";
 
 	<!-- <WAAPIRecap title={title} /> -->
 
-	<Slide>
+	<!-- <Slide>
 		<WAAPIGraph />
-	</Slide>
+	</Slide> -->
 </section>
