--- a/src/slides/part-2/js-frameworks/JSFrameworks.astro
+++ b/src/slides/part-2/js-frameworks/JSFrameworks.astro
@@ -21,8 +21,8 @@ const title = "Frameworks JavaScript";
 	<Angular title={title} />
 
 	<!-- <FrameworksRecap title={title} /> -->
-
+<!--
 	<Slide>
 		<FrameworksGraph />
-	</Slide>
+	</Slide> -->
 </section>
