--- a/src/slides/part-2/js-libraries/JSLibraries.astro
+++ b/src/slides/part-2/js-libraries/JSLibraries.astro
@@ -22,7 +22,7 @@ const title = "Librairies JavaScript";
 
 	<!-- <JSLibrariesRecap title={title} /> -->
 
-	<Slide>
+	<!-- <Slide>
 		<LibrairiesGraph />
-	</Slide>
+	</Slide> -->
 </section>
