--- a/src/slides/part-2/js-libraries/vanilla-js/VanillaJS.astro
+++ b/src/slides/part-2/js-libraries/vanilla-js/VanillaJS.astro
@@ -15,6 +15,6 @@ const { title } = Astro.props;
 <Anime title={title} />
 <MotionOne title={title} />
 
-<!-- <VanillaJSRecap title={title} /> -->
+<VanillaJSRecap title={title} />
 
 <Lottie title={title} />
