--- a/src/slides/part-3/canvas-2D/Canvas2D.astro
+++ b/src/slides/part-3/canvas-2D/Canvas2D.astro
@@ -103,9 +103,9 @@ ctx.fillRect(100, 100, 200, 200);`
 
 	<!-- <Canvas2DRecap title={title} /> -->
 
-	<Slide>
+	<!-- <Slide>
 		<Canvas2DGraph />
-	</Slide>
+	</Slide> -->
 </section>
 
 <style>
