--- a/src/slides/part-3/canvas-webgl/CanvasWebgl.astro
+++ b/src/slides/part-3/canvas-webgl/CanvasWebgl.astro
@@ -14,15 +14,16 @@ const title = "Canvas WebGL";
 <section>
 	<CanvasWebglIntro title={title} />
 	<Threejs title={title} />
-	<CanvasWebglLibs title={title} />
+	<!-- <CanvasWebglLibs title={title} /> -->
 
 	<Shaders title={title} />
 
 	<!-- <CanvasWebglRecap title={title} /> -->
-	<Slide>
+	<!-- <Slide>
 		<CanvasWebglGraph />
-	</Slide>
-	<Slide>
-		<CanvasWebglGraphLight />
-	</Slide>
+	</Slide> -->
 </section>
+
+<Slide>
+	<CanvasWebglGraphLight />
+</Slide>
