--- a/src/slides/part-4/Accessibility.astro
+++ b/src/slides/part-4/Accessibility.astro
@@ -10,7 +10,7 @@ const title = "Pour finir";
 		<h1>{"Accessibilité" + " "}</h1>
 	</Slide>
 
-	<Slide sectionTitle={title} subSectionTitle={"Accessibilité"}>
+	<!-- <Slide sectionTitle={title} subSectionTitle={"Accessibilité"}>
 		<h3>Réduction du mouvement</h3>
 		<div class="content p-0">
 			<CodeBlock lang="css">
@@ -21,7 +21,7 @@ const title = "Pour finir";
 				}
 			</CodeBlock>
 		</div>
-	</Slide>
+	</Slide> -->
 
 	<Slide sectionTitle={title} subSectionTitle={"Accessibilité"} animate={false}>
 		<h3>Réduction du mouvement</h3>
@@ -29,14 +29,14 @@ const title = "Pour finir";
 			<CodeBlock lang="css">
 				{
 					`@media (prefers-reduced-motion: no-preference) {
-  /* mouvement ok */
+  /* mouvement important */
 }`
 				}
 			</CodeBlock>
 		</div>
 	</Slide>
 
-	<Slide sectionTitle={title} subSectionTitle={"Accessibilité"} animate={false}>
+	<!-- <Slide sectionTitle={title} subSectionTitle={"Accessibilité"} animate={false}>
 		<h3>Réduction du mouvement</h3>
 		<div class="content p-0">
 			<CodeBlock lang="css">
@@ -68,7 +68,7 @@ const title = "Pour finir";
 			</CodeBlock>
 			<span class="emoji">😀</span>
 		</div>
-	</Slide>
+	</Slide> -->
 
 	<Slide sectionTitle={title} subSectionTitle={"Accessibilité"} animate={false}>
 		<h3>Réduction du mouvement</h3>
